commented something and fix the spacing of the logos

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -4,6 +4,7 @@
 /* https://coolors.co/f3e8ee-bacdb0-729b79-475b63-2e2c2f */
 
 .topnav a {
+    /* making top nav smaller, it's way too big right now */
     text-decoration: none;
     color: gray;
     padding: 1rem;
@@ -50,4 +51,5 @@ body {
 .social-container {
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
